# agentic-ai-playground

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  requirements.txt.bak
01_Integrating_LlamaIndex_and_DeepSeek-R1/: agents.py  deepseek.py  deepseek_client.py  reasoning_adapter.py  web_client.py
02_Fix_LlamaIndex_AgentWorkflow_Couldnot_Continue/: contextual_agent_workflow.py  contextual_function_agent.py  enhanced_agent_workflow.py  example_1.py  example_2.py  example_3.py  example_4.py  reordered_function_agent.py
03_Master_AutoGen-Qwen3_Integration/: 01_openai_like_client.py  02_structured_output.py  03_thinking_mode.py  04_structured_output_practice.py  README.md
03_Master_AutoGen-Qwen3_Integration/utils/: autogen_openai_like.py  openai_like.py
04_Monitor_Qwen3_Agents_with_MLflow_3/: 01_basic_setup.py  01_openai_autolog.py  02_openai_autolog.py  03_tracing_stream_output.py  04_function_calling_with_context_manager.py  05_autogen_agent_integration.py  06_autogen_workflow_tracing.py
04_Monitor_Qwen3_Agents_with_MLflow_3/utils/: autogen_openai_like.py  autogen_patching.py
04_Monitoring_Qwen3_Agents_with_MLflow_3/: 01_basic_setup.py  02_openai_autolog.py  04_function_calling_with_context_manager.py  05_autogen_agent_integration.py  06_autogen_workflow_tracing.py  README.md
05_Image_Generation_Workflow/: README.md  app.py  ctx_manager.py  events.py  prompts_cn.py  prompts_en.py  workflow.py
06_Super_Teacher_Workflow/: Dockerfile  README.md  agents.py  app.py  main.py  prompts.py  prompts_cn.py  prototype_test.py  workflow_client.py
07_Complete_Advent_of_Code/: README.md  README_cn.md  agents.py  app.py  prompts.py  prompts_cn.py
08_DeepSeek_OCR_Agentic_RAG/: README.md  ocr_agentic_rag.py  paddle_ocr_docling.py
09_Decrypt_Jupyter_Code_Executor/: README.md  README_cn.md  app.py  code_executor.py  code_writer.py  docker-compose.yml  magentic_one.py  task_planner.py
09_Jupyter_Executor_for_Autogen/: app.py  code_executor.py  code_writer.py  langchain_with_jupyter_executor.py  task_planner.py
10_Agent_Framework_Qwen3_DeepSeek/: 01_structured_output.py  02_multi_turn_conversations.py  README.md
11_MAF_Middleware_Basic/: README.md  compliance_check.py  credit_usage_check.py  server.py
12_RedisVL_Long_Short_Memory/: README.md  redisvl_message_store.py  redisvl_semantic_memory.py  test_message_store.py  test_semantic_memory.py
13_RedisVL_Long_Term_Memory_Updated/: README.md  prompt.md  prompt_cn.md  redisvl_long_term_memory.py  test_long_term_memory.py
14_Agent_Skills_in_Enterprise_LLM_Agent/: README.md  agent_skills.py  skills-lock.json
15_OpenSpec_Reflection_Harness/: README.md  README_cn.md
16_DeepSeek_Read_Images/: README.md  README_cn.md
16_DeepSeek_Read_Images/cn/: observer-bridge.js  (+1 more)
(+23 files in other folders)
