[project]
name = "agent-ai-playground"
version = "0.6.0"
description = 'This repo contains the source code for my Agentic AI series.'
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "tavily-python",
    "openai",
    "llama-index-llms-openai-like",
    "llama-index",
    "chainlit",
    "rich",
    "pydantic",
    "autogen-ext[openai]>=0.6.2",
    "autogen-ext[docker]",
    "autogen-core>=0.6.2",
    "autogen-agentchat>=0.6.2",
    "mcp-server-fetch",
    "mlflow>=3.1",
    "chainlit"
]